--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sick-fits-frontend",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Sick Fits! An example React, GraphQL, Next and Apollo",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "3.4.0",
+    "@apollo/client": "^3.5.10",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-ssr": "^4.0.0",
     "@stripe/react-stripe-js": "^1.1.2",
